# CGoGN_2

./: .gitignore  .mailmap  .travis.yml  .travis_install.sh  CMakeLists.txt  README.md  appveyor.yml  comparison.patch  configure.bat  configure.sh
benchmarks/attributes/: CMakeLists.txt  bench_attrib.cpp
benchmarks/comparison/map2/: CMakeLists.txt  performance.cpp  performance.h
benchmarks/comparison/map3/: CMakeLists.txt  performance.cpp  performance.h
benchmarks/eigen_map/: CMakeLists.txt  bench_eigen_map.cpp
benchmarks/multithreading/: CMakeLists.txt  bench_multithreading.cpp
benchmarks/quad_map/: CMakeLists.txt  bench_quad_map.cpp
benchmarks/tetra_map/: CMakeLists.txt  bench_tetra_map.cpp
cgogn/core/: CMakeLists.txt  cgogn_coreConfig.cmake.in  dll.h  external_templates.cpp
cgogn/core/basic/: assert.cpp  assert.h  cell.h  cell_handle.h  cell_marker.cpp  cell_marker.h  dart.h  dart_marker.cpp  dart_marker.h  definitions.h  dll.h  nameTypes.h  name_types.cpp  name_types.h  serialization.h  static_assert.h
cgogn/core/cmap/: attribute.h  attribute_factory.cpp  attribute_factory.h  attribute_handler.h  cmap0.cpp  cmap0.h  cmap0_builder.h  cmap1.cpp  cmap1.h  cmap1_builder.h  cmap1_tri.cpp  cmap1_tri.h  cmap2.cpp  cmap2.h  cmap2_builder.cpp  cmap2_builder.h  cmap2_quad.cpp  cmap2_quad.h  cmap2_quad_builder.cpp  cmap2_quad_builder.h  cmap2_tri.cpp  cmap2_tri.h  cmap2_tri_builder.cpp  cmap2_tri_builder.h  cmap3.cpp  cmap3.h  cmap3_builder.cpp  cmap3_builder.h  cmap3_hexa.cpp  cmap3_hexa.h  cmap3_hexa_builder.cpp  cmap3_hexa_builder.h  cmap3_tetra.cpp  cmap3_tetra.h  cmap3_tetra_builder.cpp  cmap3_tetra_builder.h  cmap_mask.h  cmap_observer.h  map_base.h  map_base_data.cpp  (+4 more)
cgogn/core/container/: chunk_array.cpp  chunk_array.h  chunk_array_container.cpp  chunk_array_container.h  chunk_array_factory.cpp  chunk_array_factory.h  chunk_array_gen.cpp  chunk_array_gen.h  chunk_heap.h  chunk_stack.cpp  chunk_stack.h
cgogn/core/cph/: attribute_handler_cph.h  ihcmap2.h  ihcmap2_adaptive.h  ihcmap2_modifier.h  ihcmap2_regular.h  ihcmap_base.h
cgogn/core/examples/: CMakeLists.txt
cgogn/core/graph/: undirected_graph.cpp  undirected_graph.h  undirected_graph_builder.h
cgogn/core/io/: surface_import.h
cgogn/core/iterator/: adjacent_iterator.h  cell_iterators.h  iterators.cpp  iterators.h
cgogn/core/map/: attribute_handler.h  cmap1.cpp  cmap1.h  cmap2.cpp  cmap2.h  cmap2_builder.cpp  cmap2_builder.h  cmap2_modifier.h  cmap3.cpp  cmap3.h  cmap_tri.h  map1.h  map2.h  map_base.h  map_base_data.cpp  map_base_data.h  map_traits.h  map_tri.h
cgogn/core/mr_map/: mr_map1.h  mr_map_base.h  mr_map_base_data.cpp  mr_map_base_data.h
cgogn/core/mrcmap/: mrcmap2.h
cgogn/core/tests/: CMakeLists.txt  main.cpp
cgogn/core/traversal/: cell_iterators.h  global.h  traversor_cell.h
cgogn/core/utils/: assert.cpp  assert.h  buffers.h  color_maps.h  definitions.h  dll.h  endian.h  log_entry.cpp  log_entry.h  log_stream.cpp  log_stream.h  logger.cpp  logger.h  logger_output.cpp  logger_output.h  make_unique.h  masks.cpp  masks.h  name_types.cpp  name_types.h  numerics.h  parallel_foreach_element.h  parallel_foreach_elt.h  precision.h  serialization.cpp  serialization.h  string.cpp  string.h  thread.cpp  thread.h  thread_barrier.h  thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  type_traits.h  unique_ptr.h
cgogn/geometry/: CMakeLists.txt  aligned_box.h  basic.h  cgogn_geometryConfig.cmake.in  dll.h  eigen.h  external_templates.cpp  geometry.cpp  geometry.h  geometry_traits.h  orientation.h  plane_3d.cpp  plane_3d.h  vec.cpp  vec.h  vec_operations.h
cgogn/geometry/algo/: bounding_box.h
cgogn/geometry/algos/: angle.cpp  angle.h  area.h  bounding_box.cpp  bounding_box.h  centroid.h  convexity.h  curvature.h  ear_triangulation.h  feature.h  filtering.h  length.h  normal.h  picking.h  selection.cpp  selection.h
cgogn/geometry/examples/: CMakeLists.txt  filtering.cpp
cgogn/geometry/functions/: area.h  basics.h  distance.h  inclusion.h  (+3 more)
cgogn/io/: 2dm_io.h  CMakeLists.txt  c_locale.h  cgogn_ioConfig.cmake.in  data_io.cpp  data_io.h  dll.h  external_templates.cpp  graph_export.cpp  graph_export.h  graph_import.cpp  graph_import.h  import_ply_data.cpp  import_ply_data.h  io_dot.h  io_obj.h  io_skel.cpp  io_skel.h  io_utils.cpp  io_utils.h  io_vtk.cpp  io_vtk.h  lm6_io.cpp  lm6_io.h  map_export.cpp  map_export.h  map_import.cpp  map_import.h  mesh_io_gen.cpp  mesh_io_gen.h  msh_io.cpp  msh_io.h  nastran_io.cpp  nastran_io.h  obj_io.cpp  obj_io.h  off_io.cpp  off_io.h  openvolumemesh_io.cpp  openvolumemesh_io.h  (+26 more)
cgogn/modeling/: CMakeLists.txt  cgogn_modelingConfig.cmake.in  dll.h  external_templates.cpp
cgogn/modelisation/: CMakeLists.txt  dll.h
cgogn/multiresolution/: CMakeLists.txt  cgogn_multiresolutionConfig.cmake.in  dll.h
cgogn/rendering/: CMakeLists.txt  cgogn_renderingConfig.cmake.in  dll.h  drawer.cpp  drawer.h  external_templates.cpp  frame_manipulator.cpp  frame_manipulator.h  hexagrid_drawer.cpp  hexagrid_drawer.h  map_quad_render.cpp  map_quad_render.h  map_render.cpp  map_render.h  map_render.h.orig  text_drawer.cpp  text_drawer.h  topo_drawer.cpp  topo_drawer.h  topo_render.cpp  topo_render.h  transparency_drawer.cpp  transparency_drawer.h  transparency_sorting.cpp  transparency_sorting.h  transparency_volume_drawer.cpp  transparency_volume_drawer.h  volume_drawer.cpp  volume_drawer.h  volume_render.cpp  volume_render.h  wall_paper.cpp  wall_paper.h
cgogn/tiling/: CMakeLists.txt  dll.h  tiling.h  triangular.cpp  triangular.h
cgogn/topology/: CMakeLists.txt  cgogn_topology.pc.in  cgogn_topologyConfig.cmake.in  dll.h  external_templates.cpp
cgogn/utils/: CMakeLists.txt  allocator.cpp  assert.cpp  assert.h  buffers.cpp  buffers.h  definitions.h  dll.h  fake_arg_used.h  make_unique.h  name_types.cpp  name_types.h  serialization.cpp  serialization.h  thread.cpp  thread.h
test/chunck_array/: CMakeLists.txt
test/chunk_array/: CMakeLists.txt  bench_chunk_array.cpp  test_chunk_array.cpp  test_chunk_array2.cpp
test/geometry/: CMakeLists.txt  test_geometry.cpp
(+449 files in other folders)
